Start to merge Map object into ServerDefinition

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/controllers/navigation.js"></script>
     <script type="text/javascript" src="app/controllers/servers.js"></script>
+    <script type="text/javascript" src="app/controllers/maps.js"></script>
 </head>
 <body ng-app="WorldManager" ng-cloak>
 <md-toolbar layout="row" class="md-toolbar-tools" md-whiteframe="3">
@@ -23,6 +24,7 @@
     <md-content md-padding>
         <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
             <md-nav-item md-nav-href="#!/servers" name="servers">Servers</md-nav-item>
+            <md-nav-item md-nav-href="#!/maps" name="maps">Maps</md-nav-item>
         </md-nav-bar>
 
         <div flex layout="row">
